--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h2>editing on website</h2>
+        <h2 style="color:cyan;">editing on website</h2>
         Hello world!
     </body>
 </html>
